lib_LTLIBRARIES=libFreeCADGui.la

BUILT_SOURCES=\
		moc_Action.cpp \
		moc_ButtonGroup.cpp \
		moc_CommandLine.cpp \
		moc_CustomWidgets.cpp \
		moc_DlgActions.cpp \
		moc_DlgActionsImp.cpp \
		moc_DlgActivateWindow.cpp \
		moc_DlgAuthorization.cpp \
		moc_DlgCmdbarsImp.cpp \
		moc_DlgCommands.cpp \
		moc_DlgCommandsImp.cpp \
		moc_DlgCustomizeImp.cpp \
		moc_DlgDisplayProperties.cpp \
		moc_DlgDisplayPropertiesImp.cpp \
		moc_DlgEditor.cpp \
		moc_DlgEditorImp.cpp \
		moc_DlgGeneral.cpp \
		moc_DlgGeneralImp.cpp \
		moc_DlgKeyboard.cpp \
		moc_DlgMacroExecute.cpp \
		moc_DlgMacroExecuteImp.cpp \
		moc_DlgMacroRecord.cpp \
		moc_DlgMacroRecordImp.cpp \
		moc_DlgOnlineHelp.cpp \
		moc_DlgOnlineHelpImp.cpp \
		moc_DlgParameter.cpp \
		moc_DlgParameterImp.cpp \
		moc_DlgPreferences.cpp \
		moc_DlgPreferencesImp.cpp \
		moc_DlgReportView.cpp \
		moc_DlgSettings3DView.cpp \
		moc_DlgSettings3DViewImp.cpp \
		moc_DlgSettingsColorGradient.cpp \
		moc_DlgSettingsDocument.cpp \
		moc_DlgSettingsDocumentImp.cpp \
		moc_DlgSettingsImage.cpp \
		moc_DlgSettingsMacro.cpp \
		moc_DlgSettingsMacroImp.cpp \
		moc_DlgTipOfTheDay.cpp \
		moc_DlgToolbars.cpp \
		moc_DlgToolbarsImp.cpp \
		moc_DlgUndoRedo.cpp \
		moc_DockWindow.cpp \
		moc_Document.cpp \
		moc_FileDialog.cpp \
		moc_HelpView.cpp \
		moc_MainWindow.cpp \
		moc_NetworkRetriever.cpp \
		moc_PrefWidgets.cpp \
		moc_Process.cpp \
		moc_ProgressBar.cpp \
		moc_PythonConsole.cpp \
		moc_PythonEditor.cpp \
		moc_ReportView.cpp \
		moc_SpinBox.cpp \
		moc_Splashscreen.cpp \
		moc_StackBar.cpp \
		moc_TextEdit.cpp \
		moc_ToolBox.cpp \
		moc_ToolBoxBar.cpp \
		moc_Tree.cpp \
		moc_View.cpp\
		moc_View3DInventor.cpp \
		moc_WidgetFactory.cpp \
		moc_Widgets.cpp \
		DlgActions.cpp \
		DlgActions.h \
		DlgActivateWindow.cpp \
		DlgActivateWindow.h \
		DlgAuthorization.cpp \
		DlgAuthorization.h \
		DlgCommands.cpp \
		DlgCommands.h \
		DlgDisplayProperties.cpp \
		DlgDisplayProperties.h \
		DlgEditor.cpp \
		DlgEditor.h \
		DlgKeyboard.cpp \
		DlgKeyboard.h \
		DlgGeneral.cpp \
		DlgGeneral.h \
		DlgMacroExecute.cpp \
		DlgMacroExecute.h \
		DlgMacroRecord.cpp \
		DlgMacroRecord.h \
		DlgOnlineHelp.cpp \
		DlgOnlineHelp.h \
		DlgParameter.cpp \
		DlgParameter.h \
		DlgPreferences.cpp \
		DlgPreferences.h \
		DlgReportView.cpp \
		DlgReportView.h \
		DlgSettings3DView.cpp \
		DlgSettings3DView.h \
		DlgSettingsColorGradient.cpp \
		DlgSettingsColorGradient.h \
		DlgSettingsDocument.cpp \
		DlgSettingsDocument.h \
		DlgSettingsImage.cpp \
		DlgSettingsImage.h \
		DlgSettingsMacro.cpp \
		DlgSettingsMacro.h \
		DlgTipOfTheDay.cpp \
		DlgTipOfTheDay.h \
		DlgToolbars.cpp \
		DlgToolbars.h \
		propertyeditor/moc_propertyeditor.cpp \
		propertyeditor/moc_propertyeditorfile.cpp \
		propertyeditor/moc_propertyeditorfont.cpp \
		propertyeditor/moc_propertyeditorinput.cpp \
		propertyeditor/moc_propertyeditoritem.cpp \
		propertyeditor/knuminput.moc \
		propertyeditor/knumvalidator.moc \
		Language/FreeCAD_de.h \
		Language/qt_de.h \
		Language/moc_Translator.cpp \
		GuiInitScript.h


libFreeCADGui_la_SOURCES=\
		propertyeditor/propertyeditor.cpp \
		propertyeditor/propertyeditor.h \
		propertyeditor/propertyeditoritem.cpp \
		propertyeditor/propertyeditoritem.h \
		propertyeditor/propertyeditordate.cpp \
		propertyeditor/propertyeditordate.h \
		propertyeditor/propertyeditorfile.cpp \
		propertyeditor/propertyeditorfile.h \
		propertyeditor/propertyeditorfont.cpp \
		propertyeditor/propertyeditorfont.h \
		propertyeditor/propertyeditorinput.cpp \
		propertyeditor/propertyeditorinput.h \
		propertyeditor/propertyeditorlist.cpp \
		propertyeditor/propertyeditorlist.h \
		propertyeditor/knuminput.cpp \
		propertyeditor/knuminput.h \
		propertyeditor/knumvalidator.cpp \
		propertyeditor/knumvalidator.h \
		\
		Language/LanguageFactory.cpp \
		Language/LanguageFactory.h \
		Language/Translator.cpp \
		Language/Translator.h \
		\
		Action.cpp \
		Action.h \
		Application.cpp \
		ApplicationPy.cpp \
		Application.h \
		BitmapFactory.cpp \
		BitmapFactory.h \
		ButtonGroup.cpp \
		ButtonGroup.h \
		CommandLine.cpp \
		CommandLine.h \
		Command.cpp \
		Command.h \
		CommandBarManager.cpp \
		CommandBarManager.h \
		CommandDoc.cpp  \
		CommandFeat.cpp  \
		CommandStd.cpp  \
		CommandWindow.cpp  \
		CommandTest.cpp \
		CommandView.cpp \
		CustomWidgets.cpp \
		CustomWidgets.h \
		DlgActionsImp.cpp \
		DlgActionsImp.h \
		DlgActivateWindowImp.cpp \
		DlgActivateWindowImp.h \
		DlgCmdbarsImp.cpp \
		DlgCmdbarsImp.h \
		DlgCommandsImp.cpp \
		DlgCommandsImp.h \
		DlgCustomizeImp.cpp \
		DlgCustomizeImp.h \
		DlgDisplayPropertiesImp.cpp \
		DlgDisplayPropertiesImp.h \
		DlgEditorImp.cpp \
		DlgEditorImp.h \
		DlgGeneralImp.cpp \
		DlgGeneralImp.h \
		DlgKeyboardImp.cpp \
		DlgKeyboardImp.h \
		DlgMacroExecuteImp.cpp \
		DlgMacroExecuteImp.h \
		DlgMacroRecordImp.cpp \
		DlgMacroRecordImp.h \
		DlgOnlineHelpImp.cpp \
		DlgOnlineHelpImp.h \
		DlgParameterImp.cpp \
		DlgParameterImp.h \
		DlgPreferencesImp.cpp \
		DlgPreferencesImp.h \
		DlgReportViewImp.cpp \
		DlgReportViewImp.h \
		DlgSettings3DViewImp.cpp \
		DlgSettings3DViewImp.h \
		DlgSettingsColorGradientImp.cpp \
		DlgSettingsColorGradientImp.h \
		DlgSettingsDocumentImp.cpp \
		DlgSettingsDocumentImp.h \
		DlgSettingsImageImp.cpp \
		DlgSettingsImageImp.h \
		DlgSettingsMacroImp.cpp \
		DlgSettingsMacroImp.h \
		DlgTipOfTheDayImp.cpp \
		DlgTipOfTheDayImp.h \
		DlgToolbarsImp.cpp \
		DlgToolbarsImp.h \
		DlgUndoRedo.cpp \
		DlgUndoRedo.h \
		DockWindow.cpp \
		DockWindow.h \
		Document.cpp \
		Document.h \
		DocumentPy.cpp \
		DocumentPy.h \
		Doxygen.cpp \
		FileDialog.cpp \
		FileDialog.h \
		GuiConsole.cpp \
		GuiConsole.h \
		HelpView.cpp \
		HelpView.h \
		Macro.cpp \
		Macro.h \
		MainWindow.cpp \
		MainWindow.h \
		MenuManager.cpp \
		MenuManager.h \
		MouseModel.cpp \
		MouseModel.h \
		NetworkRetriever.cpp \
		NetworkRetriever.h \
		PreCompiled.cpp \
		PreCompiled.h \
		PrefWidgets.cpp \
		PrefWidgets.h \
		Process.cpp \
		Process.h \
		ProgressBar.cpp \
		ProgressBar.h \
		PropertyPage.cpp \
		PropertyPage.h \
		PropertyView.cpp \
		PropertyView.h \
		PythonConsole.cpp \
		PythonConsole.h \
		PythonConsolePy.cpp \
		PythonConsolePy.h \
		PythonEditor.cpp \
		PythonEditor.h \
		ReportView.cpp \
		ReportView.h \
		resource.cpp \
		Selection.cpp \
		Selection.h \
		SoFCBackgroundGradient.cpp \
		SoFCBackgroundGradient.h \
		SoFCColorBar.cpp \
		SoFCColorBar.h \
		SoFCColorGradient.cpp \
		SoFCColorGradient.h \
		SoFCColorLegend.cpp \
		SoFCColorLegend.h \
		SoFCDB.cpp \
		SoFCDB.h \
		SoFCOffscreenRenderer.cpp \
		SoFCOffscreenRenderer.h \
		SoFCSelection.cpp \
		SoFCSelection.h \
		SoFCSelectionAction.cpp \
		SoFCSelectionAction.h \
		SpinBox.cpp \
		SpinBox.h \
		Splashscreen.cpp \
		Splashscreen.h \
		StackBar.cpp \
		StackBar.h \
		TextEdit.cpp \
		TextEdit.h \
		ToolBarManager.cpp \
		ToolBarManager.h \
		ToolBox.cpp \
		ToolBox.h \
		ToolBoxBar.cpp \
		ToolBoxBar.h \
		Tools.cpp \
		Tools.h \
		Tree.cpp \
		Tree.h \
		View.cpp \
		View.h \
		View3DInventor.cpp \
		View3DInventor.h \
		View3DInventorExamples.cpp \
		View3DInventorExamples.h \
		View3DInventorViewer.cpp \
		View3DInventorViewer.h \
		View3DPy.cpp \
		View3DPy.h \
		ViewProvider.cpp \
		ViewProvider.h \
		ViewProviderExtern.cpp \
		ViewProviderExtern.h \
		ViewProviderFeature.cpp \
		ViewProviderFeature.h \
		WaitCursor.cpp \
		WaitCursor.h \
		WhatsThis.cpp \
		WhatsThis.h \
		WidgetFactory.cpp \
		WidgetFactory.h \
		Widgets.cpp \
		Widgets.h \
		Window.cpp \
		Window.h \
		Workbench.cpp \
		Workbench.h \
		WorkbenchFactory.cpp \
		WorkbenchFactory.h \
		WorkbenchManager.cpp \
		WorkbenchManager.h \
		WorkbenchPy.cpp \
		WorkbenchPy.h

EXTRA_DIST = \
		Icons/BmpFactoryIcons.cpp \
		Icons/default_background.xpm \
		Icons/developers.h \
		Icons/Document.xpm \
		Icons/FCIcon.xpm \
		Icons/Feature.xpm \
		Icons/images.cpp \
		Icons/Icons.h \
		Icons/ParamDlgImgs.h \
		Language/linguist/LICENSE \
		Language/linguist/metatranslator.cpp \
		Language/linguist/metatranslator.h \
		Language/FreeCAD.po \
		Language/FreeCAD_de.ts \
		Language/FreeCAD_fr.ts \
		Language/qt_de.ts \
		DllMain.cpp \
		Libs.cpp \
		DlgActions.ui \
		DlgActivateWindow.ui \
		DlgAuthorization.ui \
		DlgCommands.ui \
		DlgDisplayProperties.ui \
		DlgEditor.ui \
		DlgGeneral.ui \
		DlgKeyboard.ui \
		DlgMacroExecute.ui \
		DlgMacroRecord.ui \
		DlgMacros.ui \
		DlgOnlineHelp.ui \
		DlgParameter.ui \
		DlgPreferences.ui \
		DlgReportView.ui \
		DlgSettings3DView.ui \
		DlgSettingsDocument.ui \
		DlgSettingsImage.ui \
		DlgSettingsMacro.ui \
		DlgSettingsColorGradient.ui \
		DlgSplasher.ui \
		DlgTipOfTheDay.ui \
		DlgToolbars.ui \
		FreeCADGuiInit.py \
		FreeCADGui.dsp \
		FreeCADGui.vcproj

data_DATA = Icons/FCIcon.xpm

# the library search path.
libFreeCADGui_la_LDFLAGS = -L../Base -L../App $(QT_LIBS) $(sim_ac_coin_ldflags) $(sim_ac_coin_libs) $(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) $(all_libraries) -version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@

libFreeCADGui_la_LIBADD   =\
		-lqui\
		-lFreeCADBase \
		-lFreeCADApp

# rule for Qt MetaObject Compiler:
moc_%.cpp: %.h
	cd $(@D) && $(QT_MOC) $(<F) -o $(@F)

# rule for Qt MetaObject Compiler:
%.moc: %.h
	cd $(@D) && $(QT_MOC) $(<F) -o $(@F)

# rules for Qt User Interface Compiler:
# (it adds path to #include automatically, so cd before calling it)
%.h: %.ui
	cd $(@D) && $(QT_UIC) $(<F) -o $(@F)
%.cpp: %.h %.ui
	cd $(@D) && $(QT_UIC) -o $(@F) -impl $(*F).h $(*F).ui

# rule for translation files using python script :
%.h: %.ts
	cd $(@D) && $(PYTHON) $(top_srcdir)/../Tools/qembed.py $(<F)  $(@F) $(*F)

%Script.h: FreeCAD%.py
	$(PYTHON) $(top_srcdir)/Tools/PythonToCPP.py $(<F) $@


# set the include path found by configure
INCLUDES= $(all_includes) $(QT_CXXFLAGS) -I$(sim_ac_coin_includedir) -I$(sim_ac_soqt_includedir)

# set additional defines (for cygwin only)
AM_CPPFLAGS=-DFCGui

CLEANFILES = $(BUILT_SOURCES)
