lib_LTLIBRARIES=libFreeCADGui.la

BUILT_SOURCES=\
		moc_Action.cpp \
		moc_DlgActionsImp.cpp \
		moc_DlgCmdbarsImp.cpp \
		moc_DlgCommandsImp.cpp \
		moc_DlgCustomizeImp.cpp \
		moc_DlgDisplayPropertiesImp.cpp \
		moc_DlgEditorImp.cpp \
		moc_DlgGeneralImp.cpp \
		moc_DlgInputDialogImp.cpp \
		moc_DlgKeyboardImp.cpp \
		moc_DlgMacroExecuteImp.cpp \
		moc_DlgMacroRecordImp.cpp \
		moc_DlgMaterialPropertiesImp.cpp \
		moc_DlgOnlineHelpImp.cpp \
		moc_DlgParameterImp.cpp \
		moc_DlgPreferencesImp.cpp \
		moc_DlgSettings3DViewImp.cpp \
		moc_DlgSettingsColorGradientImp.cpp \
		moc_DlgSettingsDocumentImp.cpp \
		moc_DlgSettingsImageImp.cpp \
		moc_DlgSettingsMacroImp.cpp \
		moc_DlgTipOfTheDayImp.cpp \
		moc_DlgToolbarsImp.cpp \
		moc_DlgUndoRedo.cpp \
		moc_DockWindow.cpp \
		moc_FileDialog.cpp \
		moc_HelpView.cpp \
		moc_MainWindow.cpp \
		moc_NetworkRetriever.cpp \
		moc_OnlineDocumentation.cpp \
		moc_PrefWidgets.cpp \
		moc_Process.cpp \
		moc_ProgressBar.cpp \
		moc_PropertyPage.cpp \
		moc_PropertyView.cpp \
		moc_PythonConsole.cpp \
		moc_PythonEditor.cpp \
		moc_ReportView.cpp \
		moc_SpinBox.cpp \
		moc_Splashscreen.cpp \
		moc_TextEdit.cpp \
		moc_ToolBox.cpp \
		moc_Tree.cpp \
		moc_View.cpp\
		moc_View3DInventor.cpp \
		moc_WidgetFactory.cpp \
		moc_Widgets.cpp \
		ui_AboutApplication.h \
		ui_DlgActions.h \
		ui_DlgActivateWindow.h \
		ui_DlgAuthorization.h \
		ui_DlgChooseIcon.h \
		ui_DlgCommands.h \
		ui_DlgDisplayProperties.h \
		ui_DlgEditor.h \
		ui_DlgInputDialog.h \
		ui_DlgKeyboard.h \
		ui_DlgGeneral.h \
		ui_DlgMacroExecute.h \
		ui_DlgMacroRecord.h \
		ui_DlgMaterialProperties.h \
		ui_DlgOnlineHelp.h \
		ui_DlgParameter.h \
		ui_DlgPreferences.h \
		ui_DlgProjectInformation.h \
		ui_DlgReportView.h \
		ui_DlgSettings3DView.h \
		ui_DlgSettingsColorGradient.h \
		ui_DlgSettingsDocument.h \
		ui_DlgSettingsImage.h \
		ui_DlgSettingsMacro.h \
		ui_DlgTipOfTheDay.h \
		ui_DlgToolbars.h \
		propertyeditor/moc_propertyeditor.cpp \
		propertyeditor/moc_propertyeditorfile.cpp \
		propertyeditor/moc_propertyeditorfont.cpp \
		propertyeditor/moc_propertyeditorinput.cpp \
		propertyeditor/moc_propertyeditoritem.cpp \
		Language/moc_Translator.cpp \
		Icons/qrc_resource.cpp \
		Language/qrc_translation.cpp \
		GuiInitScript.h

SOURCES=\
		Icons/qrc_resource.cpp \
		Language/qrc_translation.cpp

libFreeCADGui_la_SOURCES=\
		propertyeditor/propertyeditor.cpp \
		propertyeditor/propertyeditor.h \
		propertyeditor/propertyeditoritem.cpp \
		propertyeditor/propertyeditoritem.h \
		propertyeditor/propertyeditordate.cpp \
		propertyeditor/propertyeditordate.h \
		propertyeditor/propertyeditorfile.cpp \
		propertyeditor/propertyeditorfile.h \
		propertyeditor/propertyeditorfont.cpp \
		propertyeditor/propertyeditorfont.h \
		propertyeditor/propertyeditorinput.cpp \
		propertyeditor/propertyeditorinput.h \
		propertyeditor/propertyeditorlist.cpp \
		propertyeditor/propertyeditorlist.h \
		\
		Language/Translator.cpp \
		Language/Translator.h \
		\
		Action.cpp \
		Action.h \
		Application.cpp \
		ApplicationPy.cpp \
		Application.h \
		BitmapFactory.cpp \
		BitmapFactory.h \
		Command.cpp \
		Command.h \
		CommandBarManager.cpp \
		CommandBarManager.h \
		CommandDoc.cpp  \
		CommandFeat.cpp  \
		CommandStd.cpp  \
		CommandWindow.cpp  \
		CommandTest.cpp \
		CommandView.cpp \
		DlgActionsImp.cpp \
		DlgActionsImp.h \
		DlgActivateWindowImp.cpp \
		DlgActivateWindowImp.h \
		DlgCmdbarsImp.cpp \
		DlgCmdbarsImp.h \
		DlgCommandsImp.cpp \
		DlgCommandsImp.h \
		DlgCustomizeImp.cpp \
		DlgCustomizeImp.h \
		DlgDisplayPropertiesImp.cpp \
		DlgDisplayPropertiesImp.h \
		DlgEditorImp.cpp \
		DlgEditorImp.h \
		DlgGeneralImp.cpp \
		DlgGeneralImp.h \
		DlgInputDialogImp.cpp \
		DlgInputDialogImp.h \
		DlgKeyboardImp.cpp \
		DlgKeyboardImp.h \
		DlgMacroExecuteImp.cpp \
		DlgMacroExecuteImp.h \
		DlgMacroRecordImp.cpp \
		DlgMacroRecordImp.h \
		DlgMaterialPropertiesImp.cpp \
		DlgMaterialPropertiesImp.h \
		DlgOnlineHelpImp.cpp \
		DlgOnlineHelpImp.h \
		DlgParameterImp.cpp \
		DlgParameterImp.h \
		DlgPreferencesImp.cpp \
		DlgPreferencesImp.h \
		DlgProjectInformationImp.cpp \
		DlgProjectInformationImp.h \
		DlgReportViewImp.cpp \
		DlgReportViewImp.h \
		DlgSettings3DViewImp.cpp \
		DlgSettings3DViewImp.h \
		DlgSettingsColorGradientImp.cpp \
		DlgSettingsColorGradientImp.h \
		DlgSettingsDocumentImp.cpp \
		DlgSettingsDocumentImp.h \
		DlgSettingsImageImp.cpp \
		DlgSettingsImageImp.h \
		DlgSettingsMacroImp.cpp \
		DlgSettingsMacroImp.h \
		DlgTipOfTheDayImp.cpp \
		DlgTipOfTheDayImp.h \
		DlgToolbarsImp.cpp \
		DlgToolbarsImp.h \
		DlgUndoRedo.cpp \
		DlgUndoRedo.h \
		DockWindow.cpp \
		DockWindow.h \
		Document.cpp \
		Document.h \
		DocumentPy.cpp \
		DocumentPy.h \
		Doxygen.cpp \
		FileDialog.cpp \
		FileDialog.h \
		GuiConsole.cpp \
		GuiConsole.h \
		HelpView.cpp \
		HelpView.h \
		Macro.cpp \
		Macro.h \
		MainWindow.cpp \
		MainWindow.h \
		MenuManager.cpp \
		MenuManager.h \
		MouseModel.cpp \
		MouseModel.h \
		NetworkRetriever.cpp \
		NetworkRetriever.h \
		OnlineDocumentation.cpp \
		OnlineDocumentation.h \
		PreCompiled.cpp \
		PreCompiled.h \
		PrefWidgets.cpp \
		PrefWidgets.h \
		Process.cpp \
		Process.h \
		ProgressBar.cpp \
		ProgressBar.h \
		PropertyPage.cpp \
		PropertyPage.h \
		PropertyView.cpp \
		PropertyView.h \
		PythonConsole.cpp \
		PythonConsole.h \
		PythonConsolePy.cpp \
		PythonConsolePy.h \
		PythonEditor.cpp \
		PythonEditor.h \
		ReportView.cpp \
		ReportView.h \
		resource.cpp \
		Selection.cpp \
		Selection.h \
		SoFCBackgroundGradient.cpp \
		SoFCBackgroundGradient.h \
		SoFCColorBar.cpp \
		SoFCColorBar.h \
		SoFCColorGradient.cpp \
		SoFCColorGradient.h \
		SoFCColorLegend.cpp \
		SoFCColorLegend.h \
		SoFCDB.cpp \
		SoFCDB.h \
		SoFCInteractiveElement.cpp \
		SoFCInteractiveElement.h \
		SoFCOffscreenRenderer.cpp \
		SoFCOffscreenRenderer.h \
		SoFCSelection.cpp \
		SoFCSelection.h \
		SoFCSelectionAction.cpp \
		SoFCSelectionAction.h \
		SpinBox.cpp \
		SpinBox.h \
		Splashscreen.cpp \
		Splashscreen.h \
		SplitView3DInventor.cpp \
		SplitView3DInventor.h \
		TextEdit.cpp \
		TextEdit.h \
		ToolBarManager.cpp \
		ToolBarManager.h \
		ToolBox.cpp \
		ToolBox.h \
		Tools.cpp \
		Tools.h \
		Tree.cpp \
		Tree.h \
		View.cpp \
		View.h \
		View3DInventor.cpp \
		View3DInventor.h \
		View3DInventorExamples.cpp \
		View3DInventorExamples.h \
		View3DInventorViewer.cpp \
		View3DInventorViewer.h \
		View3DPy.cpp \
		View3DPy.h \
		ViewProvider.cpp \
		ViewProvider.h \
		ViewProviderDocumentObject.cpp \
		ViewProviderDocumentObject.h \
		ViewProviderDocumentObjectGroup.cpp \
		ViewProviderDocumentObjectGroup.h \
		ViewProviderExtern.cpp \
		ViewProviderExtern.h \
		ViewProviderFeature.cpp \
		ViewProviderFeature.h \
		ViewProviderGeometryObject.cpp \
		ViewProviderGeometryObject.h \
		ViewProviderPy.cpp \
		ViewProviderPy.h \
		ViewProviderPythonFeature.cpp \
		ViewProviderPythonFeature.h \
		WaitCursor.cpp \
		WaitCursor.h \
		WhatsThis.cpp \
		WhatsThis.h \
		WidgetFactory.cpp \
		WidgetFactory.h \
		Widgets.cpp \
		Widgets.h \
		Window.cpp \
		Window.h \
		Workbench.cpp \
		Workbench.h \
		WorkbenchFactory.cpp \
		WorkbenchFactory.h \
		WorkbenchManager.cpp \
		WorkbenchManager.h \
		WorkbenchPy.cpp \
		WorkbenchPy.h

EXTRA_DIST = \
		Icons/BmpFactoryIcons.cpp \
		Icons/default_background.xpm \
		Icons/developers.h \
		Icons/bulb.xpm \
		Icons/button_down.xpm \
		Icons/button_left.xpm \
		Icons/button_right.xpm \
		Icons/button_up.xpm \
		Icons/Document.xpm \
		Icons/FCIcon.xpm \
		Icons/Feature.xpm \
		Icons/SplashScreen.xpm \
		Icons/images.cpp \
		Icons/Icons.h \
		Icons/ParamDlgImgs.h \
		Icons/resource.qrc \
		Language/translation.qrc \
		Language/FreeCAD.po \
		Language/FreeCAD_de.qm \
		Language/FreeCAD_de.ts \
		Language/FreeCAD_fr.ts \
		Language/qt_de.qm \
		Language/qt_de.ts \
		DllMain.cpp \
		Libs.cpp \
		Qt3All.h \
		Qt4All.h \
		InventorAll.h \
		AboutApplication.ui \
		DlgActions.ui \
		DlgActivateWindow.ui \
		DlgAuthorization.ui \
		DlgChooseIcon.ui \
		DlgCommands.ui \
		DlgDisplayProperties.ui \
		DlgEditor.ui \
		DlgGeneral.ui \
		DlgInputDialog.ui \
		DlgKeyboard.ui \
		DlgMacroExecute.ui \
		DlgMacroRecord.ui \
		DlgMaterialProperties.ui \
		DlgOnlineHelp.ui \
		DlgParameter.ui \
		DlgPreferences.ui \
		DlgProjectInformation.ui \
		DlgReportView.ui \
		DlgSettings3DView.ui \
		DlgSettingsDocument.ui \
		DlgSettingsImage.ui \
		DlgSettingsMacro.ui \
		DlgSettingsColorGradient.ui \
		DlgSplasher.ui \
		DlgTipOfTheDay.ui \
		DlgToolbars.ui \
		FreeCADGuiInit.py \
		FreeCADGui.vcproj

data_DATA = Icons/FCIcon.xpm

# the library search path.
libFreeCADGui_la_LDFLAGS = -L../Base -L../App $(QT_LIBS) $(sim_ac_coin_ldflags) $(sim_ac_coin_libs) $(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) $(all_libraries) -version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@

libFreeCADGui_la_LIBADD   =\
		-l@PYTHON_LIB@ \
		-lxerces-c \
		-lQt3Support\
		-lQtCore\
		-lQtGui\
		-lqui\
		-lFreeCADBase \
		-lFreeCADApp

# rule for Qt MetaObject Compiler:
moc_%.cpp: %.h
	cd $(@D) && $(QT_MOC) $(<F) -o $(@F)

# rule for Qt MetaObject Compiler:
%.moc: %.h
	cd $(@D) && $(QT_MOC) $(<F) -o $(@F)

# rules for Qt User Interface Compiler:
# (it adds path to #include automatically, so cd before calling it)
ui_%.h: %.ui
	cd $(@D) && $(QT_UIC) $(<F) -o $(@F)

# rules for Qt Resource Compiler:
# (it adds path to #include automatically, so cd before calling it)
qrc_%.cpp: %.qrc
	cd $(@D) && $(QT_RCC) -name $(*F) $(<F) -o $(@F)

%Script.h: FreeCAD%.py
	$(PYTHON) $(top_srcdir)/src/Tools/PythonToCPP.py $(<F) $@


# set the include path found by configure
INCLUDES= $(all_includes) -I.. $(QT_CXXFLAGS) -I$(sim_ac_coin_includedir) -I$(sim_ac_soqt_includedir)

# set additional defines (for cygwin only)
AM_CPPFLAGS=-DFCGui

CLEANFILES = $(BUILT_SOURCES)
