SUBDIRS=Icons Language propertyeditor

lib_LTLIBRARIES=libFreeCADGui.la

BUILT_SOURCES=\
		moc_Action.cpp \
		moc_CallTips.cpp \
		moc_DlgActionsImp.cpp \
		moc_DlgCommandsImp.cpp \
		moc_DlgCustomizeImp.cpp \
		moc_DlgDisplayPropertiesImp.cpp \
		moc_DlgEditorImp.cpp \
		moc_DlgGeneralImp.cpp \
		moc_DlgInputDialogImp.cpp \
		moc_DlgKeyboardImp.cpp \
		moc_DlgMacroExecuteImp.cpp \
		moc_DlgMacroRecordImp.cpp \
		moc_DlgMaterialPropertiesImp.cpp \
		moc_DlgOnlineHelpImp.cpp \
		moc_DlgParameterImp.cpp \
		moc_DlgPreferencesImp.cpp \
		moc_DlgSettings3DViewImp.cpp \
		moc_DlgSettingsColorGradientImp.cpp \
		moc_DlgSettingsDocumentImp.cpp \
		moc_DlgSettingsImageImp.cpp \
		moc_DlgSettingsMacroImp.cpp \
		moc_DlgTipOfTheDayImp.cpp \
		moc_DlgToolbarsImp.cpp \
		moc_DlgUndoRedo.cpp \
		moc_DockWindow.cpp \
		moc_FileDialog.cpp \
		moc_Flag.cpp \
		moc_HelpView.cpp \
		moc_MainWindow.cpp \
		moc_NetworkRetriever.cpp \
		moc_OnlineDocumentation.cpp \
		moc_PrefWidgets.cpp \
		moc_ProgressBar.cpp \
		moc_PropertyPage.cpp \
		moc_PropertyView.cpp \
		moc_PythonConsole.cpp \
		moc_PythonEditor.cpp \
		moc_PythonView.cpp \
		moc_ReportView.cpp \
		moc_SpinBox.cpp \
		moc_Splashscreen.cpp \
		moc_TextEdit.cpp \
		moc_ToolBox.cpp \
		moc_Tree.cpp \
		moc_MDIView.cpp\
		moc_View3DInventor.cpp \
		moc_WidgetFactory.cpp \
		moc_Widgets.cpp \
		ui_AboutApplication.h \
		ui_DlgActions.h \
		ui_DlgActivateWindow.h \
		ui_DlgAuthorization.h \
		ui_DlgChooseIcon.h \
		ui_DlgCommands.h \
		ui_DlgDisplayProperties.h \
		ui_DlgEditor.h \
		ui_DlgInputDialog.h \
		ui_DlgKeyboard.h \
		ui_DlgGeneral.h \
		ui_DlgMacroExecute.h \
		ui_DlgMacroRecord.h \
		ui_DlgMaterialProperties.h \
		ui_DlgOnlineHelp.h \
		ui_DlgParameter.h \
		ui_DlgPreferences.h \
		ui_DlgProjectInformation.h \
		ui_DlgReportView.h \
		ui_DlgSettings3DView.h \
		ui_DlgSettingsColorGradient.h \
		ui_DlgSettingsDocument.h \
		ui_DlgSettingsImage.h \
		ui_DlgSettingsMacro.h \
		ui_DlgTipOfTheDay.h \
		ui_DlgToolbars.h \
		ui_DlgTreeWidget.h \
		DocumentPy.cpp \
		PythonWorkbenchPy.cpp \
		WorkbenchPy.cpp \
		ViewProviderPy.cpp \
		ViewProviderDocumentObjectPy.cpp \
		GuiInitScript.h

libFreeCADGui_la_UI=\
		AboutApplication.ui \
		DlgActions.ui \
		DlgActivateWindow.ui \
		DlgAuthorization.ui \
		DlgChooseIcon.ui \
		DlgCommands.ui \
		DlgDisplayProperties.ui \
		DlgEditor.ui \
		DlgGeneral.ui \
		DlgInputDialog.ui \
		DlgKeyboard.ui \
		DlgMacroExecute.ui \
		DlgMacroRecord.ui \
		DlgMaterialProperties.ui \
		DlgOnlineHelp.ui \
		DlgParameter.ui \
		DlgPreferences.ui \
		DlgProjectInformation.ui \
		DlgReportView.ui \
		DlgSettings3DView.ui \
		DlgSettingsDocument.ui \
		DlgSettingsImage.ui \
		DlgSettingsMacro.ui \
		DlgSettingsColorGradient.ui \
		DlgTipOfTheDay.ui \
		DlgToolbars.ui \
		DlgTreeWidget.ui

libFreeCADGui_la_BUILT=\
		DocumentPy.h \
		PythonWorkbenchPy.h \
		ViewProviderPy.h \
		ViewProviderDocumentObjectPy.h \
		WorkbenchPy.h 

libFreeCADGui_la_SOURCES=\
		Action.cpp \
		Action.h \
		Application.cpp \
		ApplicationPy.cpp \
		Application.h \
		BitmapFactory.cpp \
		BitmapFactory.h \
		CallTips.cpp \
		CallTips.h \
		Command.cpp \
		Command.h \
		CommandBarManager.cpp \
		CommandBarManager.h \
		CommandDoc.cpp  \
		CommandFeat.cpp  \
		CommandStd.cpp  \
		CommandWindow.cpp  \
		CommandTest.cpp \
		CommandView.cpp \
		DlgActionsImp.cpp \
		DlgActionsImp.h \
		DlgActivateWindowImp.cpp \
		DlgActivateWindowImp.h \
		DlgCommandsImp.cpp \
		DlgCommandsImp.h \
		DlgCustomizeImp.cpp \
		DlgCustomizeImp.h \
		DlgDisplayPropertiesImp.cpp \
		DlgDisplayPropertiesImp.h \
		DlgEditorImp.cpp \
		DlgEditorImp.h \
		DlgGeneralImp.cpp \
		DlgGeneralImp.h \
		DlgInputDialogImp.cpp \
		DlgInputDialogImp.h \
		DlgKeyboardImp.cpp \
		DlgKeyboardImp.h \
		DlgMacroExecuteImp.cpp \
		DlgMacroExecuteImp.h \
		DlgMacroRecordImp.cpp \
		DlgMacroRecordImp.h \
		DlgMaterialPropertiesImp.cpp \
		DlgMaterialPropertiesImp.h \
		DlgOnlineHelpImp.cpp \
		DlgOnlineHelpImp.h \
		DlgParameterImp.cpp \
		DlgParameterImp.h \
		DlgPreferencesImp.cpp \
		DlgPreferencesImp.h \
		DlgProjectInformationImp.cpp \
		DlgProjectInformationImp.h \
		DlgReportViewImp.cpp \
		DlgReportViewImp.h \
		DlgSettings3DViewImp.cpp \
		DlgSettings3DViewImp.h \
		DlgSettingsColorGradientImp.cpp \
		DlgSettingsColorGradientImp.h \
		DlgSettingsDocumentImp.cpp \
		DlgSettingsDocumentImp.h \
		DlgSettingsImageImp.cpp \
		DlgSettingsImageImp.h \
		DlgSettingsMacroImp.cpp \
		DlgSettingsMacroImp.h \
		DlgTipOfTheDayImp.cpp \
		DlgTipOfTheDayImp.h \
		DlgToolbarsImp.cpp \
		DlgToolbarsImp.h \
		DlgUndoRedo.cpp \
		DlgUndoRedo.h \
		DockWindow.cpp \
		DockWindow.h \
		DockWindowManager.cpp \
		DockWindowManager.h \
		Document.cpp \
		Document.h \
		DocumentPyImp.cpp \
		Doxygen.cpp \
		FileDialog.cpp \
		FileDialog.h \
		Flag.cpp \
		Flag.h \
		GuiConsole.cpp \
		GuiConsole.h \
		HelpView.cpp \
		HelpView.h \
		Macro.cpp \
		Macro.h \
		MainWindow.cpp \
		MainWindow.h \
		MDIView.cpp \
		MDIView.h \
		MenuManager.cpp \
		MenuManager.h \
		MouseModel.cpp \
		MouseModel.h \
		NavigationStyle.cpp \
		NavigationStyle.h \
		NetworkRetriever.cpp \
		NetworkRetriever.h \
		OnlineDocumentation.cpp \
		OnlineDocumentation.h \
		PreCompiled.cpp \
		PreCompiled.h \
		PrefWidgets.cpp \
		PrefWidgets.h \
		ProgressBar.cpp \
		ProgressBar.h \
		PropertyPage.cpp \
		PropertyPage.h \
		PropertyView.cpp \
		PropertyView.h \
		PythonConsole.cpp \
		PythonConsole.h \
		PythonConsolePy.cpp \
		PythonConsolePy.h \
		PythonEditor.cpp \
		PythonEditor.h \
		PythonView.cpp \
		PythonView.h \
		PythonWorkbenchPyImp.cpp \
		ReportView.cpp \
		ReportView.h \
		resource.cpp \
		Selection.cpp \
		Selection.h \
		SoFCBackgroundGradient.cpp \
		SoFCBackgroundGradient.h \
		SoFCBoundingBox.cpp \
		SoFCBoundingBox.h \
		SoFCColorBar.cpp \
		SoFCColorBar.h \
		SoFCColorGradient.cpp \
		SoFCColorGradient.h \
		SoFCColorLegend.cpp \
		SoFCColorLegend.h \
		SoFCDB.cpp \
		SoFCDB.h \
		SoFCInteractiveElement.cpp \
		SoFCInteractiveElement.h \
		SoNavigationDragger.cpp \
		SoNavigationDragger.h \
		SoFCOffscreenRenderer.cpp \
		SoFCOffscreenRenderer.h \
		SoFCSelection.cpp \
		SoFCSelection.h \
		SoFCSelectionAction.cpp \
		SoFCSelectionAction.h \
		SoFCVectorizeSVGAction.cpp \
		SoFCVectorizeSVGAction.h \
		SpinBox.cpp \
		SpinBox.h \
		Splashscreen.cpp \
		Splashscreen.h \
		SplitView3DInventor.cpp \
		SplitView3DInventor.h \
		TextEdit.cpp \
		TextEdit.h \
		ToolBarManager.cpp \
		ToolBarManager.h \
		ToolBox.cpp \
		ToolBox.h \
		Tree.cpp \
		Tree.h \
		View.cpp \
		View.h \
		View3DInventor.cpp \
		View3DInventor.h \
		View3DInventorExamples.cpp \
		View3DInventorExamples.h \
		View3DInventorViewer.cpp \
		View3DInventorViewer.h \
		View3DPy.cpp \
		View3DPy.h \
		ViewProvider.cpp \
		ViewProvider.h \
		ViewProviderDocumentObject.cpp \
		ViewProviderDocumentObject.h \
		ViewProviderDocumentObjectGroup.cpp \
		ViewProviderDocumentObjectGroup.h \
		ViewProviderExtern.cpp \
		ViewProviderExtern.h \
		ViewProviderFeature.cpp \
		ViewProviderFeature.h \
		ViewProviderGeometryObject.cpp \
		ViewProviderGeometryObject.h \
		ViewProviderInventorObject.cpp \
		ViewProviderInventorObject.h \
		ViewProviderPyImp.cpp \
		ViewProviderDocumentObjectPyImp.cpp \
		ViewProviderPythonFeature.cpp \
		ViewProviderPythonFeature.h \
		WaitCursor.cpp \
		WaitCursor.h \
		WhatsThis.cpp \
		WhatsThis.h \
		WidgetFactory.cpp \
		WidgetFactory.h \
		Widgets.cpp \
		Widgets.h \
		Window.cpp \
		Window.h \
		Workbench.cpp \
		Workbench.h \
		WorkbenchFactory.cpp \
		WorkbenchFactory.h \
		WorkbenchManager.cpp \
		WorkbenchManager.h \
		WorkbenchPyImp.cpp 

EXTRA_DIST = \
		$(libFreeCADGui_la_UI) \
		Qt4All.h \
		InventorAll.h \
		FreeCADGuiInit.py \
		DocumentPy.xml \
		PythonWorkbenchPy.xml \
		WorkbenchPy.xml \
		ViewProviderPy.xml \
		ViewProviderDocumentObjectPy.xml \
		FreeCADGui.vcproj

# the library search path.
libFreeCADGui_la_LDFLAGS = -L../Base -L../App $(QT_LIBS) $(sim_ac_coin_ldflags) $(sim_ac_coin_libs) $(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) $(all_libraries) -version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@

libFreeCADGui_la_LIBADD   =\
		Icons/libIcons.la \
		Language/libLanguage.la \
		propertyeditor/libpropertyeditor.la \
		-l@PYTHON_LIB@ \
		-lQtUiTools \
		-lxerces-c \
		-lboost_filesystem \
		-lboost_signals \
		-lFreeCADBase \
		-lFreeCADApp

# rule for Qt MetaObject Compiler:
moc_%.cpp: %.h
	$(QT_MOC) $< -o $(@F)

# rule for Qt MetaObject Compiler:
%.moc: %.h
	$(QT_MOC) $< -o $(@F)

# rules for Qt User Interface Compiler:
ui_%.h: %.ui
	$(QT_UIC) $< -o $(@F)

# rules for Qt Resource Compiler:
qrc_%.cpp: %.qrc
	$(QT_RCC) -name $(*F) $< -o $(@F)

%Script.h: FreeCAD%.py
	$(PYTHON) $(top_srcdir)/src/Tools/PythonToCPP.py $< $@

%.cpp: %.xml
	$(PYTHON) $(top_srcdir)/src/Tools/generate.py --outputPath $(@D) $<


# set the include path found by configure
INCLUDES= $(all_includes) -I$(top_srcdir)/src -I$(top_builddir)/src $(QT_CXXFLAGS) -I$(sim_ac_coin_includedir) -I$(sim_ac_soqt_includedir)

# set additional defines (for cygwin only)
AM_CPPFLAGS=-DFCGui

CLEANFILES = $(BUILT_SOURCES) $(libFreeCADGui_la_BUILT)

