SUBDIRS=_TEMPLATE_


EXTRA_DIST = \
		encode/lencode.cpp \
		fcbt/__init__.py \
		fcbt/BuildDoc.py \
		fcbt/BuildDocDoxy.cfg \
		fcbt/CreateModule.py \
		fcbt/DistBin.py \
		fcbt/DistSetup.py \
		fcbt/DistSrc.py \
		fcbt/DistTools.py \
		fcbt/FileTools.py \
		fcbt/NextBuildNumber.py \
		generate.py \
		generateBase/generateModel_ModuleTest.xml \
		generateBase/generateMetaModel_Module.xsd \
		generateBase/__init__.py \
		generateBase/generateModel_Module.py \
		generateBase/generateDS.py \
		generateBase/generateTools.py \
		generateTemplates/__init__.py \
		generateTemplates/template.py \
		generateTemplates/templateClassPyExport.py \
		generateTemplates/templateCMakeFile.py \
		generateTemplates/templateCPPFile.py \
		generateTemplates/templateHeaderFile.py \
		generateTemplates/templateInitPy.py \
		generateTemplates/templateInitGuiPy.py \
		generateTemplates/templateModule.py \
		generateTemplates/templateModuleApp.py \
		generateTemplates/templateModuleGui.py \
		generateTemplates/templateModuleAppFeature.py \
		generateTemplates/templateModuleAppMain.py \
		ImageTools/ImageConv/CmdLine.cpp \
		ImageTools/ImageConv/CmdLine.h \
		ImageTools/ImageConv/cmdline.htm \
		ImageTools/ImageConv/imageconv.cpp \
		ImageTools/ImageConv/imageconv.h \
		ImageTools/ImageConv/ImageConv.pro \
		ImageTools/ImageConv/main.cpp \
		plugins/widget/customwidgets.cpp \
		plugins/widget/customwidgets.h \
		plugins/widget/plugin.cpp \
		plugins/widget/plugin.h \
		plugins/widget/plugin.pro \
		RegExp/main.cpp \
		RegExp/RegExp.pro \
		RegExp/regexpdialog.cpp \
		RegExp/regexpdialog.h \
		RegExp/regexpdialogbase.ui \
		ConvertUi.py \
		DistTools.py \
		fcbt.py \
		FCFileTools.py \
		InstallMsg.txt \
		MakeApp.py \
		MakeAppTools.py \
		MakeNewBuildNbr.py \
		post_moc.py \
		MemoryLeaks.py \
		PythonToCPP.py \
		pythondoc.py \
		tstocpp.py \
		qembed.py \
		SubWCRev.py \
		WixFileTool.py

